# duplicat-rex

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: compare.md  converge.md  deploy.md  duplicate.md  recon.md  test.md
scripts/: cli.py  compare.py  converge.py  domain_model.py  duplicate.py  experiment_runner.py  fact_analyzer.py  gap_analyzer.py  hypothesis_builder.py  keychain.py  model_refiner.py  model_ticket_generator.py  models.py  pre-merge-check.sh  scientific_recon.py  scope.py  spec_store.py  spec_synthesizer.py  test_generator.py  verification_gate.py  visual_comparator.py
scripts/recon/: api_docs.py  base.py  browser_explore.py  changelog.py  community.py  help_center.py  interactive_explore.py  marketing.py  orchestrator.py  video_transcribe.py
templates/: spec-schema.json
tests/: test_api_docs.py  test_browser_explore.py  test_changelog.py  test_cli_compare.py  test_cli_compare_converge.py  test_cli_converge.py  test_cli_duplicate.py  test_cli_recon.py  test_community.py  test_compare.py  test_converge.py  test_domain_model.py  test_duplicate.py  test_fact_analyzer.py  test_gap_analyzer.py  test_help_center.py  test_interactive_explore.py  test_keychain.py  test_marketing.py  test_model_ticket_generator.py  test_models.py  test_noise_filter_source.py  test_orchestrator.py  test_scaffold.py  test_scope.py  test_spec_store.py  test_spec_synthesizer.py  test_test_generator.py  test_verification_gate.py  test_video_transcribe.py  test_visual_comparator.py
(+8 files in other folders)
